--- a/static.css
+++ b/static.css
@@ -183,6 +183,7 @@ button {
     font-weight: 800;
     border: none;
     box-shadow: 0px 0px 20px rgb(250, 138, 19, 0.5);
+    color: black;
 }
 
 .inputs > button:hover {
