--- a/static.css
+++ b/static.css
@@ -10,6 +10,16 @@
     }
 }
 
+@keyframes load-light {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 @keyframes load-leaders {
     from {
         opacity: 1;
@@ -344,4 +354,45 @@ input[type="range"]::-webkit-slider-thumb {
     font-size: 12px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.text {
+    position: relative;
+    top: 160px;
+    width: 90%;
+    left: 5%;
+    text-align: center;
+    font-size: 34px;
+    font-weight: 600;
+    color: rgb(192, 192, 192);
+
+    animation: load-light 2s forwards;
+}
+
+#gold {
+    font-weight: 800;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(50deg, #e9820c 0%, #eb8e23 46%, #FFCC70 100%);
+}
+
+.how {
+    position: relative;
+    top: 190px;
+    width: 90%;
+    left: 5%;
+    height: 200px;
+    background-color: rgb(19, 19, 22);
+    border-radius: 30px;
+    box-shadow: 0px 0px 30px;
+}
+
+.how > h1 {
+    font-weight: 800;
+    left: 20px;
+    top: 0px;
+    position: absolute;
+    font-size: 26px;
+
+    color:#e9820c;
 }
