--- a/static.css
+++ b/static.css
@@ -109,6 +109,7 @@ footer {
     top: 100px;
     width: 100%;
     height: 200px;
+    z-index: -1;
 }
 
 header {
@@ -434,4 +435,20 @@ input[type="range"]::-webkit-slider-thumb {
     width: 90%;
     left: 20px;
     top: 10px;
+}
+
+#goup {
+    position: relative;
+    top: 220px;
+    width: 80%;
+    height: 50px;
+    left: 10%;
+    border-radius: 15px;
+    background:  rgb(250, 138, 19);
+    font-size: 16px;
+    font-weight: 800;
+    border: none;
+    box-shadow: 0px 0px 20px rgb(250, 138, 19, 0.5);
+    color: black;
+    cursor: pointer;
 }
