--- a/static.css
+++ b/static.css
@@ -543,31 +543,65 @@ hr {
     top: 70px;
     left: 7%;
     width: 86%;
-    color: grey;
+    color: rgb(173, 173, 173);
     font-size: 12px;
     display: block;
 }
 
-.message {
-    width: calc(86% - 40px);
-    left: 7%;
-    position: relative;
-    height: 50px;
+.messsage-box > .message {
+    width: calc(100% - 40px);
+    position: absolute;
+    left: 0;
+    height: 100%;
     padding: 0px 20px;
     border: none;
     outline: none;
     border-radius: 20px;
     background-color: #0a0b0e;
-    top: 90px;
+    top: 0;
     color: rgb(218, 218, 218);
     border: 1px solid #24252c;
     font-size: 16px;
 }
 
+
 .message:focus-within {
     border: 1px solid grey;
 }
 
+.message:focus-within + .pre {
+    border-top: 1px solid grey;
+    opacity: 0;
+}
+
+
 .order > button {
-    top: 120px;
+    top: 150px;
+}
+
+.pre {
+    position: relative;
+    left: 5%;
+    color: rgb(173, 173, 173);
+    font-size: 10px;
+    text-transform: uppercase;
+    top: 84px;
+    border-radius: 10px;
+    padding: 6px 10px;
+    background-color: #0a0b0e;
+
+    position: absolute;
+    top: -7px;
+    z-index: 2;
+    border-top: 1px solid #24252c;
+    
+}
+
+.messsage-box {
+    position: relative;
+    width: 86%;
+    height: 50px;
+    left: 7%;
+    top: 110px;
+    margin-bottom: 20px;
 }
