--- a/static.css
+++ b/static.css
@@ -562,6 +562,7 @@ hr {
     color: rgb(218, 218, 218);
     border: 1px solid #24252c;
     font-size: 16px;
+    padding-top: 6px;
 }
 
 
@@ -570,8 +571,8 @@ hr {
 }
 
 .message:focus-within + .pre {
-    border-top: 1px solid grey;
-    opacity: 0;
+    border-top: 1px solid #24252c;
+    background-color: #0a0b0e;
 }
 
 
